循環参照のテストケースを追加。 循環参照のチェックにSetを使おうとするとJsonArrayのhashCodeの計算が無限に再起するのでArrayListを使うよう変更。